// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`если авторизация через OAuth, то проверять ckey не нужно 1`] = `
Object {
  "cookieRenew": false,
  "models": Array [
    Object {
      "data": Object {},
      "name": "do-label",
      "status": "ok",
    },
  ],
  "timestamp": 1540487881000,
  "uid": "12",
  "versions": Object {
    "duffman": "1.0.0",
    "web-api": "dev-web-api",
  },
}
`;

exports[`запрашивает модели с ckey 1`] = `
Object {
  "cookieRenew": false,
  "models": Array [
    Object {
      "data": Object {},
      "name": "do-label",
      "status": "ok",
    },
  ],
  "timestamp": 1540487881000,
  "uid": "12",
  "versions": Object {
    "duffman": "1.0.0",
    "web-api": "dev-web-api",
  },
}
`;

exports[`запрос моделей без ckey, даёт ошибку в ответе 1`] = `
Object {
  "cookieRenew": false,
  "models": Array [
    Object {
      "error": "ckey",
      "name": "do-label",
      "renewCkey": "kbydplfc8Sul2Nb21MEtCPh14yI=!jnqa5ezs",
      "status": "error",
    },
  ],
  "timestamp": 1540487881000,
  "uid": "12",
  "versions": Object {
    "duffman": "1.0.0",
    "web-api": "dev-web-api",
  },
}
`;
